Fix layout error on small devices
Fixed an error which allowed the book description to overflow on small devices.  Also ensured that items are all aligned to the top of their flex boxes, and that publishers also are separated by a comma if a book has more than one publisher (which is admittedly unusual).

--- a/books/css/books.css
+++ b/books/css/books.css
@@ -3,6 +3,7 @@ div.books {}
 div.books div.book {
   display: flex;
   flex-direction: row;
+  align-items: top;
 }
 
 div.books div.book:not(:last-child) {
@@ -12,14 +13,11 @@ div.books div.book:not(:last-child) {
 div.books div.book div.book-image-container {
   flex: 20%;
   min-width: 60px;
-  vertical-align: middle;
   margin-right: 1rem;
 }
 
 div.books div.book div.book-details-container {
   flex: 80%;
-  min-width: 300px;
-  vertical-align: top;
   margin-left: 1rem;
 }
 
@@ -48,16 +46,17 @@ div.books div.book div.book-details-container span.author-label {
   font-weight: bold;
 }
 
-div.books div.book div.book-details-container div.book-publishers span.book-publisher:not(:last-child)::after {
+div.books div.book div.book-details-container div.book-meta div.book-authors span.book-author:not(:last-child)::after,
+div.books div.book div.book-details-container div.book-meta div.book-publishers span.book-publisher:not(:last-child)::after {
   content: ", ";
 }
 
-div.books div.book div.book-details-container div.book-authors span.book-author:not(:last-child)::after {
+div.books div.book div.book-details-container div.book-meta div.book-publishers span.book-publisher:not(:last-child)::after {
   content: ", ";
 }
 
-div.books div.book div.book-details-container div.book-publishers,
-div.books div.book div.book-details-container div.book-isbn {
+div.books div.book div.book-details-container div.book-meta div.book-publishers,
+div.books div.book div.book-details-container div.book-meta div.book-isbn {
   display: inline;
   font-size: 0.8rem;
 }
@@ -70,6 +69,3 @@ div.book-publishers + div.book-isbn::before {
 @media screen and (max-width: 650px) {  
 
 }
-
-
-
